drive related changes

--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -110,7 +110,7 @@
                                             <div id="driveBrowser" class="drive-browser">
                                                 <div class="drive-browser-container">
                                                     <div class="drive-list-panel">
-                                                        <h4>Available Drives</h4>
+                                                        <h4>Available drives</h4>
                                                         <div id="driveList" class="drive-list">
                                                             <div class="loading">Loading drives...</div>
                                                         </div>
@@ -135,7 +135,7 @@
                                                     oninput="validate_fields()">
                                             </div>
                                             <div class="col-4 col-12-xsmall" style="display: flex; align-items: flex-end;">
-                                                <a id="add" class="button primary icon solid fa-save" style="width: 100%;">Add</a>
+                                                <a id="add" class="button primary icon solid fa-save" style="width: 100%;" disabled>Add</a>
                                             </div>
                                         </div>
                                         <div id="message" class="message hidden"></div>
