--- a/web/index.html
+++ b/web/index.html
@@ -4,6 +4,7 @@
 <head>
 	<title>Eyedeea Photos</title>
 	<meta charset="utf-8" />
+	<link rel="icon" type="image/x-icon" href="favicon.ico">
 	<link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
 	<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 	<meta name="apple-mobile-web-app-capable" content="yes" />
