--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -4,6 +4,7 @@
 <head>
     <title>Eyedeea Photos</title>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/fontawesome-all.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
@@ -103,7 +104,7 @@
                                         <div class="col-12">
                                             <label for="directory">Selected Directory</label>
                                             <input type="text" id="directory" name="directory"
-                                                placeholder="Browse and select a directory below or type/paste the path"
+                                                placeholder="Select a directory below or type/paste"
                                                 oninput="validate_fields()">
                                         </div>
                                         <div class="col-12">
