--- a/web/manage/logs.html
+++ b/web/manage/logs.html
@@ -4,6 +4,7 @@
 <head>
     <title>Eyedeea Photos</title>
     <meta charset="utf-8" />
+    <link rel="icon" type="image/x-icon" href="../favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
     <link rel="stylesheet" href="assets/css/fontawesome-all.min.css" />
     <link rel="stylesheet" href="assets/css/main.css" />
