--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -242,6 +242,10 @@
                 <!-- Footer -->
                 <footer id="footer">
                     <p class="copyright">&copy; Eyedia Technologies. All rights reserved.</p>
+                    <p id="app-version" style="font-size: 0.8em; opacity: 0.7; margin-top: 0.5em;">
+                        <span id="version-text">Loading version...</span>
+                        <span id="update-badge" class="hidden" style="color: #f56a6a; cursor: pointer;" onclick="checkForUpdates()"> • Update available!</span>
+                    </p>
                 </footer>
 
             </div>
