--- a/web/index.html
+++ b/web/index.html
@@ -131,7 +131,7 @@
 		<!-- Footer -->
 		<footer id="footer">
 			<ul class="copyright">
-				<li>&copy; <a href="https://eyedeeaphotos.eyediatech.com/" target="_blank">Eyedia Tech</a></li>
+				<li>&copy; Eyedia Technologies. Licensed under <a href="https://github.com/eyedia/EyedeeaPhotos/blob/main/LICENSE" target="_blank">GNU General Public License v3.0</a></li>
 			</ul>
 		</footer>
 
