--- a/web/manage/index.html
+++ b/web/manage/index.html
@@ -241,10 +241,10 @@
                 </nav>
                 <!-- Footer -->
                 <footer id="footer">
-                    <p class="copyright">&copy; Eyedia Technologies. All rights reserved.</p>
-                    <p id="app-version" style="font-size: 0.8em; opacity: 0.7; margin-top: 0.5em;">
+                    <p class="copyright">&copy; Eyedia Technologies. Licensed under <a href="https://github.com/eyedia/EyedeeaPhotos/blob/main/LICENSE" target="_blank">GNU General Public License v3.0</a>.</p>
+                    <p id="app-version">
                         <span id="version-text">Loading version...</span>
-                        <span id="update-badge" class="hidden" style="color: #f56a6a; cursor: pointer;" onclick="checkForUpdates()"> • Update available!</span>
+                        <span id="update-badge" class="hidden" onclick="checkForUpdates()"> • Update available!</span>
                     </p>
                 </footer>
 
