--- a/web/manage/logs.html
+++ b/web/manage/logs.html
@@ -90,7 +90,7 @@
                 </nav>
                 <!-- Footer -->
                 <footer id="footer">
-                    <p class="copyright">&copy; Eyedia Technologies. All rights reserved.</p>
+                    <p class="copyright">&copy; Eyedia Technologies. Licensed under <a href="https://github.com/eyedia/EyedeeaPhotos/blob/main/LICENSE" target="_blank">GNU General Public License v3.0</a>.</p>
                 </footer>
 
             </div>
