--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -203,6 +203,7 @@
                             </ul>
                         </li>
                         <li><a href="logs.html">Logs</a></li>
+                        <li><a href="downloads.html">Downloads</a></li>
                         <li><a href="../">Back</a></li>
                     </ul>
                 </nav>
