--- a/web/manage/player.html
+++ b/web/manage/player.html
@@ -206,6 +206,7 @@
                             </ul>
                         </li>
                         <li><a href="logs.html">Logs</a></li>
+                        <li><a href="downloads.html">Downloads</a></li>
                         <li><a href="../">Back</a></li>
                     </ul>
                 </nav>
