when photo is missing, improved logging

--- a/web/index.html
+++ b/web/index.html
@@ -141,8 +141,8 @@
 			<i class="large material-icons">photo</i>
 		</a>
 		<ul>
-			<!-- <li><a id="mt_trash_it" class="btn-floating tooltipped red" data-tooltip="(T)rash it"
-					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">delete</i></a></li> -->
+			<li><a id="mt_trash_it" class="btn-floating tooltipped red" data-tooltip="(T)rash it"
+					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">delete</i></a></li>
 			<li><a id="mt_mark_it" class="btn-floating tooltipped blue" data-tooltip="(M)ark it"
 					onclick="mt_hangle_tool_click(this.id)"><i class="material-icons">bookmark</i></a></li>
 
