--- a/web/manage/source.html
+++ b/web/manage/source.html
@@ -95,6 +95,7 @@
                                 <tr>
                                     <th>Directory</th>
                                     <th>Photos</th>
+                                    <th>Scan</th>
                                 </tr>
                             </thead>
                             <tbody id="dirs-table-body">
